fix: prevent bullet squishing

--- a/components/Radio.module.css
+++ b/components/Radio.module.css
@@ -12,6 +12,7 @@
 }
 
 .bullet {
+  flex: none;
   height: 1.5rem;
   width: 1.5rem;
   margin-right: 1rem;
